# readflow

./: .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
server/: pyproject.toml
server/app/: __init__.py
server/app/api/: router.py
server/app/chunking/: __init__.py  planner.py
server/app/core/: __init__.py  app.py  config.py  hub.py  services.py
server/app/jobs/: __init__.py  manager.py  models.py
server/app/media/: __init__.py  mp4.py  store.py
server/app/scheduler/: __init__.py  service.py
server/app/schemas/: api.py
server/app/synthesis/: __init__.py  model_manager.py  provider.py  worker.py
server/app/telemetry/: __init__.py  service.py
server/app/voices/: __init__.py  registry.py
server/tests/: conftest.py
server/tests/integration/: test_api.py  test_real_model.py
server/tests/unit/: test_config.py  test_jobs.py  test_planner.py  test_provider.py  test_scheduler.py  test_voices.py
server/voices/howard/: meta.json  ref.txt
server/voices/male_default/: meta.json
server/voices/suzy/: meta.json  ref.txt
web/: eslint.config.js  index.html  package.json  playwright.config.ts  setupTests.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.build.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
web/e2e/: smoke.spec.ts
web/src/: main.tsx  styles.css
web/src/app/: App.test.tsx  App.tsx
web/src/features/admin/: AdminPage.test.tsx  AdminPage.tsx
web/src/features/jobs/: JobCreateForm.test.tsx  JobCreateForm.tsx  JobsPage.tsx
web/src/features/reader/: ReaderPage.test.tsx  ReaderPage.tsx  timeline.test.ts  timeline.ts
web/src/hooks/: useAppBootstrap.ts
web/src/lib/: api.ts  live-client.ts  media-source.test.tsx  media-source.ts  transport.ts
web/src/state/: store.ts
web/src/types/: api.ts
