[project]
name = "readflow-server"
version = "0.1.0"
description = "ReadFlow backend"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.9.0",
  "flash-attn==2.8.3",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "pydantic>=2.11.4",
  "pydantic-settings>=2.9.1",
  "python-multipart>=0.0.20",
  "qwen-tts",
  "uvicorn>=0.34.2"
]

[project.optional-dependencies]
dev = [
  "coverage>=7.8.0",
  "pyright>=1.1.400",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"
markers = [
  "real_model: opt-in tests that exercise the actual Qwen backend"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = false

[tool.uv.extra-build-dependencies]
flash-attn = [
  "packaging",
  "wheel",
  "setuptools",
  "ninja",
  "torch"
]
